assets/css/main.css
/* ... */
/* Small */

	@media screen and (max-width: 736px) {

		/* Basic */

			h1 {
				font-size: 1.5em;
			}

			h2 {
				font-size: 1.2em;
			}

			h3 {
				font-size: 1em;
			}

		/* Section/Article */

			section.special, article.special {
				text-align: center;
			}

			header.major h2 {
				font-size: 1.35em;
			}

		/* List */

			ul.labeled-icons li {
				padding-left: 2em;
			}

				ul.labeled-icons li h3 {
					line-height: 1.75em;
				}

		/* Header */

			#header {
				padding: 2.25em 1.5em;
			}

				#header h1 {
					font-size: 1.35em;
				}

		/* Footer */

			#footer {
				padding: 2.25em 1.5em;
			}

		/* Main */

			#main {
				padding: 2.25em 1.5em 0.25em 1.5em;
			}

				#main > section {
					margin: 2.25em 0 0 0;
					padding: 2.25em 0 0 0;
				}

		/* Poptrox */

			.poptrox-popup {
				border-radius: 0;
			}

				.poptrox-popup .nav-next:before,
				.poptrox-popup .nav-previous:before {
					margin-top: -1em;
				}

	}

/* XSmall */

	@media screen and (max-width: 480px) {

		/* Header */

			#header {
				padding: 4.5em 1.5em;
			}

				#header h1 br {
					display: none;
				}

		/* Footer */

			#footer .copyright li {
				border-left-width: 0;
				display: block;
				line-height: 2.25em;
				margin-left: 0;
				padding-left: 0;
			}

	}

/* Fraser Parlane's CSS begins here. 20220824 */

/* References table formatting. */

.references {
	line-height: 1.5em;
	padding-bottom: 8px!important;
}

.references td {
	padding-top: 10px;
	padding-bottom: 10px;
}
.references td:hover {
	-webkit-transition: all 1s ease;
}

/* A generic table with years in the right-hand column. */

.years {
	line-height: 1.25em;
}

.years tr {
	border: none;
}

.years tr td {
	border: none;
	border-image-width: 0;
	padding-bottom: 15px;
}

.years tr td:nth-child(2n) {
	text-align: right;
	padding-left: 50px;
	/*font-weight: bold;*/
}

.years h3 {
	margin-bottom: 0px;
	/*font-weight: bold;*/
}

/*The table containing the research circles. */

.research-table {
	line-height: 1.5em;
}

.research-table tr {
	border: none;
	background-color: transparent!important;
}

.research-table td {
	border: none;
	border-image-width: 0;
	vertical-align: middle;
	padding-top: 20px;
	padding-bottom: 20px;
	padding-left: 20px;
}

.research-table td:nth-child(2n+1) {
	padding-right: 20px;
}

.research-table h3 {
	margin: 0;
}

.press {
    line-height: 1.5em;
}

.press tr {
    border: none;
    background-color: transparent!important;
}

.press tr td {
    border: none;
    border-image-width: 0;
    vertical-align: middle;
}

.press img {
    opacity: 0.75;
    max-height: 30px;
	max-width: 200px;
}

.press td:nth-child(2n) {
    padding-left: 50px;
}

.press td:nth-child(2n+1) {
	text-align: right;
	padding-left: 50px;
}

.press td {
    padding-top: 50px;
}

/* Collapse tables on mobile - something like this will work*/
@media screen and (max-width: 980px) {
	.table-collapse :is(table, thead, tbody, th, td, tr) {
		display: block;
	}

	.table-collapse td:nth-child(2n+1) {
		text-align: left;
	}

	.table-collapse td:nth-child(2n) {
		padding-top: 10px;
	}

	.press img {
		opacity: 0.75;
	}

	.press td {
		padding-left: 0px !important;
	}
}

#main h1 {
	text-align: left;
	padding-top: 0.75em;
}

/* Intro text */
.intro-text {
	text-align: justify;
	padding-top: 110px;
	padding-bottom: 5px;
	margin-bottom: 10px;

}

/* Button formatting */

.actions-top {
	/*padding-bottom: 150px;*/
}

.actions-top span {
	padding-right: 10px;
}
.actions-top li {
	vertical-align: middle;
}

@media screen and (max-width: 980px) {

	ul.actions-top:not(.fixed) {
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
		margin-left: 0;
		width: 100% !important;
	}

	ul.actions-top:not(.fixed) li {
		-moz-flex-grow: 1;
		-webkit-flex-grow: 1;
		-ms-flex-grow: 1;
		flex-grow: 1;
		-moz-flex-shrink: 1;
		-webkit-flex-shrink: 1;
		-ms-flex-shrink: 1;
		flex-shrink: 1;
		padding: 1em 0 0 0;
		text-align: center;
		width: 100%;
	}

	ul.actions-top:not(.fixed) li > * {
		width: 100%;
	}

	ul.actions-top:not(.fixed) li:first-child {
		padding-top: 0;
	}

	ul.actions-top:not(.fixed) li input[type="submit"],
	ul.actions-top:not(.fixed) li input[type="reset"],
	ul.actions-top:not(.fixed) li input[type="button"],
	ul.actions-top:not(.fixed) li button,
	ul.actions-top:not(.fixed) li .button {
		width: 100%;
	}

	ul.actions-top:not(.fixed) li input[type="submit"].icon:before,
	ul.actions-top:not(.fixed) li input[type="reset"].icon:before,
	ul.actions-top:not(.fixed) li input[type="button"].icon:before,
	ul.actions-top:not(.fixed) li button.icon:before,
	ul.actions-top:not(.fixed) li .button.icon:before {
		margin-left: -0.5em;
	}
}

/* Name */
.my-name {
	font-size: 3em;
	font-family: var(--heading-font-family);
	color: var(--highlight-color);

}
.my-name-slug {
	color: var(--text-color);
	font-size: 1em;
}

h1 {
	color: var(--highlight-color);
	font-family: var(--heading-font-family);
}

.highlight-text {
	margin-bottom: 50px;
}

.highlight-link {
	border-bottom: none;
	/*display: flex;*/
	justify-content: space-between;
	margin: 0;
	padding: 0;
}

.highlight-image {
	width: max(18%, 120px);
	opacity: 75%;
	/*padding-right: 20px;*/
	/*padding-left: 20px;*/
	padding-bottom: 15px;
	padding-top: 10px;
	justify-content: space-between;
}

.highlight-image-container {
	/*text-align: center;*/
	padding-bottom: 50px;
	display: flex;
	flex-direction: row;
	justify-content: flex-start;

}

/* https://codepen.io/sosuke/pen/Pjoqqp */
.highlight-image:hover {
	/*filter: invert(76%) sepia(78%) saturate(2947%) hue-rotate(345deg) brightness(99%) contrast(97%);*/
	opacity: 100%;
}

.heading-year {
	color: #CCCCCC;
	white-space: nowrap;
}

.projects-heading {
	margin-bottom: 10px;
}

/* The menu in the header. */

.menu-links {
	list-style-type: none;
	padding-top: 25px;
	padding-left: 0;
	transition: border-color 0.2s ease-in-out;
	font-size: 1.35em;
	line-height: 1.75;
}
/* ... */

